--- a/app/src/main/res/layout-v28/fragment_home.xml
+++ b/app/src/main/res/layout-v28/fragment_home.xml
@@ -81,10 +81,12 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
+        android:paddingHorizontal="24dp"
+        android:clipToPadding="false"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="@id/guideline10"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline9"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tilSearchBlog" />
 
     <TextView
@@ -92,8 +94,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="@string/popular"
-        android:textFontWeight="600"
         android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
+        android:textFontWeight="600"
         app:layout_constraintEnd_toStartOf="@+id/guideline10"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
